เขียน feature ของ PlayerAccountModule
Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Modules/PlayerAccount/TheS.Casinova.PlayerAccount.WebExecutors/TheS.Casinova.PlayerAccount.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/PlayerAccount/TheS.Casinova.PlayerAccount.WebExecutors/TheS.Casinova.PlayerAccount.WebExecutors.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PerfEx.Infrastructure">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="PerfEx.Infrastructure.Advanced">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.Advanced.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,10 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebExecutors\CancelPlayerAccountExecutor.cs" />
+    <Compile Include="WebExecutors\CreatePlayerAccountExecutor.cs" />
+    <Compile Include="WebExecutors\EditPlayerAccountExecutor.cs" />
+    <Compile Include="WebExecutors\GetPlayerAccountExecutor.cs" />
+    <Compile Include="WebExecutors\ListPlayerAccountExecutor.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="WebExecutors\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
