ปรับขนาดของ GamePlayPage, GamePlayUI, HowToPlayWindow, ChildWindow ให้ตรงตามมาตรฐาน Page (ยกเว้น AccountManagerWindow, DepositWindow,) แก้ไข Image1.png ให้ตรงตาม Convention ที่อยู่ภายใน project Fortune เพิ่ม ExportPopupContent ของ Fortune
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/CasinovaAllStars/CasinovaAllStars.csproj
+++ b/src/CasinovaAll/Silverlights/CasinovaAllStars/CasinovaAllStars.csproj
@@ -110,6 +110,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Resource Include="Assets\CasinovaStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Resource>
     <Page Include="Views\DynamicViews\MefPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
