--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.Commands/TheS.Casinova.ChipExchange.Commands.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.Commands/TheS.Casinova.ChipExchange.Commands.csproj
@@ -40,11 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ChipsToBonusChipsCommand.cs" />
+    <Compile Include="Commands\ChipsToMoneyCommand.cs" />
+    <Compile Include="Commands\GetPlayerBalanceCommand.cs" />
+    <Compile Include="Commands\GetVoucherCodeCommand.cs" />
+    <Compile Include="Commands\MoneyToBonusChipsCommand.cs" />
+    <Compile Include="Commands\MoneyToChipsCommand.cs" />
+    <Compile Include="Commands\PayVoucherCommand.cs" />
+    <Compile Include="Commands\VoucherToBonusChipsCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Chat\TheS.Casinova.Chat.Models\TheS.Casinova.Chat.Models.csproj">
       <Project>{8E50F3B7-4F44-49BE-A5CE-2CDF66EF4D9C}</Project>
