--- a/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/TheS.Casinova.SupportContent.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/TheS.Casinova.SupportContent.Silverlight.csproj
@@ -84,8 +84,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SupportContent\Views\AbountUsWindow.xaml.cs">
-      <DependentUpon>AbountUsWindow.xaml</DependentUpon>
+    <Compile Include="SupportContent\Views\AboutUsWindow.xaml.cs">
+      <DependentUpon>AboutUsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="SupportContent\Views\FAQWindow.xaml.cs">
       <DependentUpon>FAQWindow.xaml</DependentUpon>
@@ -103,7 +103,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="SupportContent\Views\AbountUsWindow.xaml">
+    <Page Include="SupportContent\Views\AboutUsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
