add ViewModels in MLN, Chat
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Chat.Silverlight/TheS.Casinova.Chat.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Chat.Silverlight/TheS.Casinova.Chat.Silverlight.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Chat\Silverlight\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Chat\ViewModels\ChatViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
