--- a/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/TheS.Casinova.DevilSix.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/TheS.Casinova.DevilSix.Silverlight.csproj
@@ -99,9 +99,12 @@
     <Compile Include="DevilSix\ViewModels\PageFourViewModel.cs" />
     <Compile Include="DevilSix\ViewModels\PageThreeViewModel.cs" />
     <Compile Include="DevilSix\ViewModels\PageTwoViewModel.cs" />
-    <Compile Include="DevilSix\ViewModels\MainPageViewModel.cs" />
+    <Compile Include="DevilSix\ViewModels\GamePlayViewModel.cs" />
     <Compile Include="DevilSix\Views\BetDataPage.xaml.cs">
       <DependentUpon>BetDataPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DevilSix\Views\GamePlayPage.xaml.cs">
+      <DependentUpon>GamePlayPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="DevilSix\Views\GraphPage.xaml.cs">
       <DependentUpon>GraphPage.xaml</DependentUpon>
@@ -136,6 +139,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="DevilSix\Views\BetDataPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DevilSix\Views\GamePlayPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
