--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.BackServices/TheS.Casinova.ChipExchange.BackServices.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.BackServices/TheS.Casinova.ChipExchange.BackServices.csproj
@@ -35,6 +35,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PerfEx.Infrastructure">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="PerfEx.Infrastructure.Advanced">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.Advanced.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -44,30 +50,21 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackServices\BackExecutors\MoneyToBonusChipsExecutor.cs" />
+    <Compile Include="BackServices\BackExecutors\MoneyToChipsExecutor.cs" />
+    <Compile Include="BackServices\BackExecutors\VoucherToBonusChipsExecutor.cs" />
+    <Compile Include="BackServices\Commands\PayExchangeCommand.cs" />
+    <Compile Include="BackServices\IPayExchangeEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="BackServices\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Chat\TheS.Casinova.Chat.BackServices.Contracts\TheS.Casinova.Chat.BackServices.Contracts.csproj">
-      <Project>{22E75CE1-13B3-494C-8C50-656BFC00AC7D}</Project>
-      <Name>TheS.Casinova.Chat.BackServices.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Chat\TheS.Casinova.Chat.Commands\TheS.Casinova.Chat.Commands.csproj">
-      <Project>{D2D7DFFA-E259-4E8F-A505-E9F68E39E234}</Project>
-      <Name>TheS.Casinova.Chat.Commands</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Chat\TheS.Casinova.Chat.DAL.BackContracts\TheS.Casinova.Chat.DAL.BackContracts.csproj">
-      <Project>{46154170-1E0F-403B-91B9-7BE808A593CE}</Project>
-      <Name>TheS.Casinova.Chat.DAL.BackContracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Chat\TheS.Casinova.Chat.Models\TheS.Casinova.Chat.Models.csproj">
-      <Project>{8E50F3B7-4F44-49BE-A5CE-2CDF66EF4D9C}</Project>
-      <Name>TheS.Casinova.Chat.Models</Name>
+    <ProjectReference Include="..\..\PlayerAccount\TheS.Casinova.PlayerAccount.Models\TheS.Casinova.PlayerAccount.Models.csproj">
+      <Project>{28B48276-2905-4A6C-9BBA-09007F7E7084}</Project>
+      <Name>TheS.Casinova.PlayerAccount.Models</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
@@ -76,6 +73,22 @@
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
       <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
       <Name>TheS.Casinova.Common.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.ChipExchange.BackServices.Contracts\TheS.Casinova.ChipExchange.BackServices.Contracts.csproj">
+      <Project>{4812732D-8D4A-489C-90C5-AD1401F94398}</Project>
+      <Name>TheS.Casinova.ChipExchange.BackServices.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.ChipExchange.Commands\TheS.Casinova.ChipExchange.Commands.csproj">
+      <Project>{783249CD-793F-4C2C-BE6C-980C70FAB6DD}</Project>
+      <Name>TheS.Casinova.ChipExchange.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.ChipExchange.DAL.BackContracts\TheS.Casinova.ChipExchange.DAL.BackContracts.csproj">
+      <Project>{EA10BD8C-3F35-411C-81ED-C43EA49AE2AC}</Project>
+      <Name>TheS.Casinova.ChipExchange.DAL.BackContracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.ChipExchange.Models\TheS.Casinova.ChipExchange.Models.csproj">
+      <Project>{4D33D4E0-40CE-4AF2-A30F-53FCAE1A2886}</Project>
+      <Name>TheS.Casinova.ChipExchange.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
