edit template GameTable DevilSix add GameTable model in MagicNine

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/TheS.Casinova.MagicNine.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/TheS.Casinova.MagicNine.Silverlight.csproj
@@ -31,6 +31,8 @@
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
     <LinkedServerProject>
     </LinkedServerProject>
+    <Utf8Output>true</Utf8Output>
+    <ExpressionBlendVersion>4.0.20525.0</ExpressionBlendVersion>
   </PropertyGroup>
   <!-- This property group is only here to support building this project using the 
        MSBuild 3.5 toolset. In order to work correctly with this older toolset, it needs 
@@ -86,6 +88,7 @@
       <DependentUpon>GamePlayUI.xaml</DependentUpon>
     </Compile>
     <Compile Include="MagicNine\GameApplicationInformation.cs" />
+    <Compile Include="MagicNine\Models\GameTable.cs" />
     <Compile Include="MagicNine\Popups\BetData.xaml.cs">
       <DependentUpon>BetData.xaml</DependentUpon>
     </Compile>
@@ -148,6 +151,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="MagicNine\Views\HowToPlayWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MagicNine\Views\ResourceDictionary01.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
